# My_Chat_Window_Can_Not_Be_A_GalGame

./: .gitignore  CLAUDE.md  LICENSE  README.md  creator_gui.py  creator_gui_check.pyc.1851085765552  global_config.json  global_config.yaml  main.py  requirements.txt  run_gui.bat  sync_config.py
__pycache__/: creator_gui.cpython-312.pyc.1833255984928  creator_gui.cpython-312.pyc.2541454714768
apps/desktop/: PACKAGING.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/desktop/src/: App.tsx  styles.css  tauri.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
assets/characters/ayase/: config.json
assets/characters/kanata/: config.json
assets/characters/yuraa/: config.yaml
core/: __init__.py  clipboard.py  engine.py  listener.py  prebuild.py  renderer.py  utils.py
docs/: CREATOR_GUI.md  SYNC_CONFIG.md  character_config_reference.yaml  global_config_reference.yaml
gui/: constants.py  main_window.py
gui/canvas/: items.py
gui/panels/: props_panel.py
gui/widgets/: asset_list.py
