[package]
name = "galgame-chat-desktop"
version = "0.1.0"
description = "Modern Tauri desktop app for My Chat Window Can Not Be A GalGame"
authors = ["OuroChival-Shizue", "Codex"]
edition = "2021"

[lib]
name = "galgame_chat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2.5.0"
thiserror = "2.0"
walkdir = "2.5"

image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = "0.25"
ab_glyph = "0.2"
tauri-plugin-global-shortcut = "2.3"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Controls_Dialogs"] }
